# RustByExample

./: Cargo.toml  README.md  hello.txt
src/: library.rlib  main  main.rs  rary.rs
test/: my_test.rs
